[gd_scene load_steps=32 format=3 uid="uid://c8ldqs2ik8dbq"]

[ext_resource type="Script" path="res://Entities/Player/player.gd" id="1_262ky"]
[ext_resource type="Texture2D" uid="uid://dqelm10xyjohs" path="res://Entities/Player/MC_IceCream_Spritesheet.png" id="2_4sjg8"]
[ext_resource type="Script" path="res://Entities/Player/interaction_area.gd" id="3_lx3da"]
[ext_resource type="FontFile" uid="uid://cicibgt41ljx6" path="res://UI/mago2.ttf" id="4_gt3v6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7c3wq"]
size = Vector2(19, 6.5)

[sub_resource type="Animation" id="Animation_fblil"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d7ee1"]
resource_name = "idle_down"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}

[sub_resource type="Animation" id="Animation_lftjs"]
resource_name = "idle_left"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [28, 29]
}

[sub_resource type="Animation" id="Animation_byuhi"]
resource_name = "idle_right"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_gt8yx"]
resource_name = "idle_up"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_1rwp8"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 2]
}

[sub_resource type="Animation" id="Animation_hahwv"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 14]
}

[sub_resource type="Animation" id="Animation_4j3p8"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}

[sub_resource type="Animation" id="Animation_51wrd"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cg0dg"]
_data = {
"RESET": SubResource("Animation_fblil"),
"idle_down": SubResource("Animation_d7ee1"),
"idle_left": SubResource("Animation_lftjs"),
"idle_right": SubResource("Animation_byuhi"),
"idle_up": SubResource("Animation_gt8yx"),
"walk_down": SubResource("Animation_1rwp8"),
"walk_left": SubResource("Animation_hahwv"),
"walk_right": SubResource("Animation_4j3p8"),
"walk_up": SubResource("Animation_51wrd")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_luu83"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_screx"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ktb3y"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0fwe8"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_v1nag"]
blend_point_0/node = SubResource("AnimationNodeAnimation_luu83")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_screx")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ktb3y")
blend_point_2/pos = Vector2(1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_0fwe8")
blend_point_3/pos = Vector2(-1.1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i2dpr"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5kgpp"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vha5w"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qml5y"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3cyv7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_i2dpr")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_5kgpp")
blend_point_1/pos = Vector2(1.1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_vha5w")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_qml5y")
blend_point_3/pos = Vector2(-1.1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hd6me"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5a2hi"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7jeaw"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_253rf"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_v1nag")
states/Idle/position = Vector2(327, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_3cyv7")
states/Walk/position = Vector2(441, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_hd6me"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_5a2hi"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_7jeaw")]

[sub_resource type="CircleShape2D" id="CircleShape2D_prq3f"]
radius = 16.0312

[sub_resource type="LabelSettings" id="LabelSettings_e35g4"]
font = ExtResource("4_gt3v6")
shadow_color = Color(0, 0, 0, 0.145098)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_262ky")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 10.75)
shape = SubResource("RectangleShape2D_7c3wq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cg0dg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_253rf")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(-0.00158983, 0.925532)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4sjg8")
hframes = 4
vframes = 8

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_lx3da")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_prq3f")

[node name="InteractLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -11.0
text = "[E]"
label_settings = SubResource("LabelSettings_e35g4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD" type="CanvasLayer" parent="."]
visible = false

[node name="QuestTracker" type="ColorRect" parent="HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 210.0
color = Color(0.141176, 0.141176, 0.141176, 0.160784)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/QuestTracker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="HUD/QuestTracker/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Objectives" type="VBoxContainer" parent="HUD/QuestTracker/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="area_entered" from="InteractionArea" to="InteractionArea" method="_on_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="InteractionArea" method="_on_area_exited"]
